--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+    body{
+      overflow-y: hidden;
+    }
+    </style>
     <!-- <style>
     <meta name="google-site-verification" content="VnKXAe8yTsCLdUzCT8kSiwihu9fJFM4whHiPzohMRWw" />
         /* body { -->
-          width: 1px;
+          <!-- width: 1px;
           min-width: 100%;
           *width: 100%;
         }
@@ -29,7 +34,7 @@
 
         .fm{
           float: left;
-        } */
+        } */ -->
 
     <!-- </style> -->
     <script type="application/ld+json">
@@ -75,8 +80,7 @@
 
 <body>
 <div class="stage" id="stage">
-  <div class="block block-fill-height app-block-wayne"
-       style="background-image: url(/assets/q.jpg)">
+  <div class="block block-fill-height app-block-wayne" style="background-image: url(/assets/q.jpg)">
     <div class="block-sm-right block-xs-top">
       <div class="container">
         <div class="row">
@@ -189,13 +193,14 @@
       </div>
     </div>
   </div>
+</div>
+</div>
 
   <div class="block block-fill-height block-transparent block-angle app-block-chainz" id="chainz">
 
     <div class="block-bg-clip">
       <div class="block-bg">
-        <div class="block-bg-img block-bg-img-top"
-             style="background-image: url(/assets/auditorium.jpg)">
+        <div class="block-bg-img block-bg-img-top" style="background-image: url(/assets/auditorium.jpg)">
         </div>
       </div>
     </div>
@@ -259,12 +264,12 @@
                           </div>
           <div class="col-md-5 offset-sm-7">
             <h1 class="block-title mb-4">
-               <span class="text-ribbon text-ribbon-danger">
+               <span class="text-ribbon text-ribbon-primary">
                 <span>Hand Picked</span>
               </span>
             </h1>
             <p class="lead">
-              <span class="text-ribbon ">
+              <span class="text-ribbon text-ribbon-primary ">
                 <span>
                   Every album, song, and video is the very best in class.
                 </span>
@@ -289,7 +294,7 @@
         <div class="row">
           <div class="col-md-5">
             <h1 class="block-title mb-4">
-              <span class="text-ribbon text-ribbon-info">
+              <span class="text-ribbon">
                 <span>Music Videos</span>
               </span>
             </h1>
